tests/lean/pureCoeIssue.lean.expected.out
pureCoeIssue.lean:6:2-6:4: error: Type mismatch
  f1
has type
  Nat → IO Unit
but is expected to have type
  IO PUnit
pureCoeIssue.lean:14:2-14:7: error: Type mismatch
  f2 10
has type
  Nat → IO Unit
but is expected to have type
  IO PUnit
